@@ -1,20 +1,22 @@
 package ru.croc.task16;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Scanner;
 
 public class Main {
     public static void main (String[] args) {
-        ArrayList<AgeGroup> groups =  new ArrayList<>();
+        ArrayDeque<AgeGroup> groups =  new ArrayDeque<>(args.length);
         for (int i = 0; i < args.length; i++) {
-            Short age = Short.parseShort(args[i]);
+            int age = Integer.parseInt(args[i]);
             if (i == 0)
-                groups.add(new AgeGroup(0, age));
+                groups.addLast(new AgeGroup(0, age));
             else if (i == args.length - 1)
-                groups.add(new AgeGroup(age, Short.MAX_VALUE));
+                groups.addLast(new AgeGroup(age + 1, Integer.MAX_VALUE));
             else
-                groups.add(new AgeGroup(groups.get(groups.size() - 1).getMax() + 1, age));
+                groups.addLast(new AgeGroup(groups.getLast().getMax() + 1, age));
         }
+        System.out.printf("Количество возрастных групп: %d\n", groups.size());
 
         System.out.println("Введите данные респондентов:");
         ArrayList<Person> people = new ArrayList<>();
@@ -25,5 +27,22 @@ public class Main {
             input = scanner.nextLine();
         }
         System.out.printf("Количество респондентов: %d\n", people.size());
+
+        for (Person person : people) {
+            for (AgeGroup group : groups) {
+                if (group.getMin() <= person.getAge() && person.getAge() <= group.getMax()) {
+                    group.people.add(person);
+                    break;
+                }
+            }
+        }
+
+        groups.removeIf((AgeGroup group) -> group.people.size() == 0);
+        groups.iterator().forEachRemaining((AgeGroup group) -> group.people.sort((Person left, Person right) ->
+            {int result = Integer.compare(left.getAge(), right.getAge()) * -1;
+            return result != 0 ? result : left.getName().compareTo(right.getName());}));
+
+        for (int i = groups.size() - 1; i >= 0; i--)
+            System.out.printf("%s\n", groups.pollLast());
     }
 }
